# coreason_etl_oecd

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  llms.txt  pyproject.toml  zensical.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: index.md
src/coreason_etl_oecd/: config.py  main.py
src/coreason_etl_oecd/utils/: __init__.py  logger.py
src/coreason_etl_oecd_health/: __init__.py  config.py  main.py  models.py  pipeline.py
src/coreason_etl_oecd_health/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/coreason_etl_oecd_health/dbt/models/bronze/: sources.yml
src/coreason_etl_oecd_health/dbt/models/gold/: gold_oecd_health_expenditure_timeseries.sql  gold_oecd_healthcare_resources.sql
src/coreason_etl_oecd_health/dbt/models/silver/: schema.yml  silver_oecd_health_metrics.sql
src/coreason_etl_oecd_health/dlt/: ingest.py
tests/: __init__.py  test_config.py  test_dlt_ingest.py  test_main.py  test_models.py  test_pipeline.py  test_utils.py
