[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreason-etl-oecd-health"
version = "0.1.0"
description = "Type A pipeline for ingesting, normalizing, and serving the OECD Health Statistics database."
authors = [{ name = "CoReason Platform Team", email = "platform@coreason.com" }]
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]",
    "dbt-postgres",
    "pydantic",
    "requests",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "types-requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_etl_oecd_health"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["COM812", "PGH003", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["dlt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=coreason_etl_oecd_health --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
