[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreason-etl-oecd-health"
version = "0.1.0"
description = "Pipeline for ingesting, normalizing, and serving the OECD Health Statistics database."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Prosperity Public License 3.0" }
dependencies = [
    "dlt[postgres]",
    "dbt-postgres",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_etl_oecd_health"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
