[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreason-etl-oecd-health"
version = "0.1.0"
description = "Pipeline for ingesting, normalizing, and serving the OECD Health Statistics database"
authors = [
    { name = "CoReason Data Engineering", email = "data-eng@coreason.example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dlt[postgres]>=0.4.5",
    "dbt-postgres>=1.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "requests-mock>=1.11.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_etl_oecd_health"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
